--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 jinja2>=3.1.0
 python-multipart>=0.0.6
+slowapi>=0.1.9
 
 # Data visualization (for notebooks)
 matplotlib>=3.7.0
@@ -17,6 +18,9 @@ plotly>=5.18.0
 
 # Excel support (lead testing data)
 openpyxl>=3.1.0
+
+# Testing
+pytest>=7.0.0
 
 # Jupyter (optional, for local development only)
 # nbformat>=5.9.0
